application-code-chart/templates/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: three-tier-application-backend-service
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: three-tier-application-frontend-service
                port:
                  number: 3000
